# SeriousOrganizer-fltk

./: Cargo.toml
src/: add_label_dialog.rs  base_table.rs  choice_dialog.rs  counter.rs  entry_context_menu.rs  entry_label_dialog.rs  entry_table.rs  error_dialog.rs  file_context_menu.rs  file_table.rs  label_list.rs  layout.rs  loading_dialog.rs  location_dialog.rs  location_table.rs  main.rs  path_dialog.rs  rename_dialog.rs  table_utils.rs
src/label/: add_label_dialog.rs  entry_label_dialog.rs  entry_label_list.rs  label_list.rs  mod.rs
src/label_filter/: label_filter_dialog.rs  label_filter_edit_dialog.rs  label_filter_list.rs  label_filter_preview_list.rs  mod.rs
src/location/: location_dialog.rs  location_table.rs  mod.rs
src/model/: message.rs
