[package]
name = "test-flt"
version = "0.1.0"
authors = ["Jesper Axelsson <jesperaxe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "0.9.4", features = ["fltk-bundled"] }
serious_organizer_lib = {git = "https://github.com/JesperAxelsson/SeriousOrganizerLib.git" }
open = "1.4.0"
