[package]
name = "serious_organizer_fltk"
version = "0.1.0"
authors = ["Jesper Axelsson <jesperaxe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "0.16", features = ["fltk-bundled"] }
# serious_organizer_lib = {git = "https://github.com/JesperAxelsson/SeriousOrganizerLib.git" }
serious_organizer_lib = { path = "../SeriousOrganizerLib" }
open = "1.6.0"

parking_lot = "0.11.0"
time = "0.2.26"

log = "0.4.11"
simplelog = "0.10"
